# sagittarius

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  Dockerfile  LICENSE  README.md  devenv.nix  docker-compose.yml  nginx.conf  package-lock.json  package.json  renovate.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: auto-merge-comps-update.yml  build.yml  checks.yml  comps-update.yml  release.yml  tests.yml
apps/dockerfiles/: Dockerfile.backend  Dockerfile.frontend
apps/s3/: docker-compose.yml
apps/s3/backend/: .env.example  Cargo.toml  README.md
apps/s3/backend/entity/: Cargo.toml
apps/s3/backend/entity/src/entities/: key.rs  mod.rs
apps/s3/backend/migration/src/: lib.rs
apps/s3/backend/src/: config.rs  cors.rs  example.rs  logging.rs  macros.rs  main.rs  test.rs
apps/s3/backend/src/auth/: jwt_auth.rs  jwt_state.rs  login.rs  logout.rs  mod.rs  pw_state.rs
apps/s3/backend/src/db/: invalid_jwt.rs  key.rs  mod.rs  user.rs
apps/s3/backend/src/s3/: auth.rs  header.rs  mod.rs
apps/s3/backend/src/s3/auth/: body.rs  credential.rs  header.rs  mod.rs  multipart.rs  query.rs  sig_v4.rs  to_sign.rs
apps/s3/backend/src/s3/operations/: bucket.rs
apps/s3/backend/src/s3/storage/: mod.rs  no_raid.rs
apps/s3/frontend/: package.json  svelte.config.js  vite.config.ts
apps/s3/frontend/src/: app.css
apps/s3/frontend/src/lib/backend/: auth.svelte.ts
apps/s3/frontend/src/lib/components/form/: login-form.svelte  totp-form.svelte
apps/s3/frontend/src/lib/components/navbar/sidebar-app/: nav-main.svelte  nav-projects.svelte  nav-user.svelte  sidebar-app.svelte  team-switcher.svelte
apps/s3/frontend/src/lib/form/: login-form.svelte  signup-form.svelte
apps/s3/frontend/src/routes/: +layout.svelte  +page.svelte
apps/s3/frontend/src/routes/buckets/: +layout.svelte  +page.svelte
apps/s3/frontend/src/routes/buckets/[id]/: +page.svelte
apps/s3/frontend/src/routes/login/: +page.svelte
apps/s3/frontend/src/routes/signup/: +page.svelte
apps/s3/frontend/src/routes/totp/: +page.svelte
backend/: .env.example  .gitignore  Cargo.toml  build.rs
backend/entity/: Cargo.toml
backend/entity/src/entities/: config.rs  invalid_jwt.rs  mod.rs  prelude.rs  user.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20250926_172600_key.rs  m20250926_172626_invalid_jwt.rs  m20250926_173213_user.rs  m20251007_164500_config.rs
backend/src/: config.rs  example.rs  frontend.rs  health.rs  lib.rs  macros.rs  main.rs
backend/src/auth/: jwt_auth.rs  jwt_state.rs  login.rs  logout.rs  mod.rs  oidc.rs  pw_state.rs  res.rs  test_token.rs
backend/src/config/: env.rs  mod.rs  ui.rs
backend/src/db/: config.rs  invalid_jwt.rs  key.rs  mod.rs  user.rs
backend/src/s3/: header.rs  interface.rs  mod.rs
backend/src/s3/auth/: body.rs  credential.rs  header.rs  mod.rs  multipart.rs  query.rs  sig_v4.rs
backend/src/s3/operations/: bucket.rs  mod.rs  object.rs
backend/src/s3/storage/: mod.rs  no_raid.rs
backend/tests/: bucket.rs  common.rs  health_check.rs  object.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: app.css
frontend/src/lib/backend/: auth.svelte.ts  sso.svelte.ts
frontend/src/lib/components/form/: login-form.svelte
frontend/src/lib/components/navbar/sidebar-app/: nav-main.svelte  nav-user.svelte  sidebar-app.svelte  team-switcher.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/buckets/: +layout.svelte  +page.svelte
frontend/src/routes/buckets/[id]/: +page.svelte
frontend/src/routes/login/: +page.server.ts  +page.svelte  schema.svelte.ts
