[workspace]
resolver = "3"
members = ["backend", "backend/migration", "backend/entity"]

[workspace.dependencies]
centaurus = { version = "0.2.0", features = [
  "axum",
  "logging",
  "argon2",
  "base64",
  "chrono",
  "hmac",
  "jsonwebtoken",
  "rsa",
  "sea-orm",
] }
uuid = { version = "1.18.1", features = ["v4"] }
axum = { version = "0.8.4", features = [
  "macros",
  "ws",
  "tracing",
  "multipart",
] }
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
tracing-subscriber = "=0.3.19"
clap = { version = "4.5.47", features = ["derive", "env"] }
tracing = "0.1.41"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
http = "1.3.1"
tokio = { version = "1.47.1", features = ["signal", "rt-multi-thread", "fs"] }
dotenv = "0.15.0"
thiserror = "2.0.16"
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.143"
serde-xml-rs = "0.8.1"
async-trait = "0.1.89"
hmac = { version = "0.12.1", features = ["std"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
eyre = "0.6.12"
color-eyre = "0.6.5"
sea-orm = { version = "1.1.16", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
jsonwebtoken = "9.3.1"
rsa = "0.9.8"
password-hash = "0.5.0"
