[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
sea-orm = { workspace = true }
centaurus = { version = "0.3.2", features = [
  "axum",
  "logging",
  "argon2",
  "base64",
  "chrono",
  "hmac",
  "jsonwebtoken",
  "rsa",
  "sea-orm",
  "uuid",
  "reqwest",
] }
uuid = { version = "1.18.1", features = ["v4"] }
axum = { version = "0.8.4", features = [
  "macros",
  "ws",
  "tracing",
  "multipart",
] }
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
tracing-subscriber = "=0.3.19"
tracing = "0.1.41"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }
http = "1.3.1"
tokio = { version = "1.47.1", features = ["signal", "rt-multi-thread", "fs"] }
dotenv = "0.15.0"
serde_json = "1.0.143"
serde-xml-rs = "0.8.1"
async-trait = "0.1.89"
hmac = { version = "0.12.1", features = ["std"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
eyre = "0.6.12"
color-eyre = "0.6.5"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
rsa = "0.9.8"
argon2 = { version = "0.5.3", features = ["std"] }
entity = { path = "entity" }
migration = { path = "migration" }
sha2 = "0.10.9"
hex = "0.4.3"
serde-enum-str = "0.4.0"
mime = "0.3.17"
serde_urlencoded = "0.7.1"
futures = "0.3.31"
memchr = "2.7.5"
time = "0.3.44"
hyper-util = { version = "0.1.17", features = ["client-legacy"] }
url = "2.5.7"
reqwest = { version = "0.12.23", features = [
  "json",
  "rustls-tls",
  "charset",
  "http2",
  "system-proxy",
  "multipart",
], default-features = false }
figment = { version = "0.10.19", features = ["env", "toml"] }

[features]
test = []

[[bin]]
name = "backend"
path = "src/main.rs"
