[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
ichwilldich-lib = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }

[[bin]]
name = "backend"
path = "src/main.rs"
