[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
ichwilldich-lib = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
dotenv = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
http = { workspace = true }
serde = { workspace = true }

[[bin]]
name = "backend"
path = "src/main.rs"
