[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
ichwilldich-lib = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
dotenv = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
http = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
hmac = { workspace = true }
sha2 = "0.10.9"
chrono = { version = "0.4.42", features = ["serde"] }
hex = "0.4.3"
urlencoding = "2.1.3"
serde-enum-str = "0.4.0"

[[bin]]
name = "backend"
path = "src/main.rs"
